samples/_failures_safe/1761621118_c8a247_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd160945.c: In function ‘main’:
./samples/SAFE/__tmp_bd160945.c:177:16: error: missing terminating " character
  177 |         printf("Empty input\n
      |                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_bd160945.c:177:9: error: expected expression at end of input
  177 |         printf("Empty input\n
      |         ^~~~~~
./samples/SAFE/__tmp_bd160945.c:177:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bd160945.c:177:9: error: expected declaration or statement at end of input
